--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
           ]
         },
         {
+          "name": "@electron-forge/maker-dmg",
+          "config": {}
+        },
+        {
           "name": "@electron-forge/maker-deb",
           "config": {}
         },
@@ -69,6 +73,7 @@
     "electron": "^28.2.0"
   },
   "dependencies": {
+    "@electron-forge/maker-dmg": "^7.2.0",
     "electron-log": "^5.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2"
