--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "private_gpt",
   "version": "1.0.0",
-  "description": "",
+  "description": "Private GPT desktop application",
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -41,12 +41,6 @@
           }
         },
         {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
           "name": "@electron-forge/maker-dmg",
           "config": {}
         },
@@ -65,7 +59,7 @@
   "license": "ISC",
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
+    "@electron-forge/maker-deb": "^7.4.0",
     "@electron-forge/maker-rpm": "^7.2.0",
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
