--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
       "packagerConfig": {
         "extraResource": [
           "./appdist"
+        ],
+        "ignore": [
+          "node_modules/@mui/icons-material"
         ]
       },
       "makers": [
@@ -63,8 +66,8 @@
     "@electron-forge/cli": "^7.2.0",
     "@electron-forge/maker-deb": "^7.4.0",
     "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "electron": "^28.2.0"
   },
